<resources>
    <string name="app_name">FunderHub</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chandan Naik</string>
    <string name="nav_header_subtitle">chandannaik999@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home_page">HOME PAGE</string>
    <string name="start_a_request">Start a Request</string>
    <string name="home">Home</string>
    <string name="request_history">Request History</string>
    <string name="document_upload">Document Upload</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="favorites">Favorites</string>
    <string name="your_donations">Your Donations</string>
    <string name="about">About</string>
    <string name="demo_name">Chandan Naik</string>
    <string name="demo_request">Request for Rs. 50000 to buy a new laptop for research purposes</string>
    <string name="demo_place">Mangalore</string>
    <string name="demo_percent_funded">Rs. 50000</string>
    <string name="demo_no_of_backers">100 \nbackers</string>
    <string name="demo_days_left">27 \ndays left</string>
    <string name="demo_amount">Rs 50000/-\nrequested</string>
    <string name="search">Search</string>
    <string name="demo_rating">2</string>
    <string name="bookmarks">Your bookmarks</string>
    <string name="demo_location">Mangalore, India</string>
    <string name="explore">Explore</string>
    <string name="your_requests">Your Requests</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="de_activate_your_account">De-Activate your Account</string>
    <string name="facebook_app_id">1671488156286128</string>
    <string name="fb_login_protocol_scheme">fb1671488156286128</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_in_using_google">Google</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="msg_box">Enter password</string>
    <string name="reenter">Please enter your password</string>
    <string name="Continue">Continue</string>
    <string name="ask">May I know the Reson for De-Acivating</string>
    <string name="give_your_project_a_name">Give your project a name</string>
    <string name="tell_your_story">Tell your story</string>
    <string name="amount_required">Amount Required?</string>
    <string name="what_is_the_deadline">What is the Deadline</string>
    <string name="upload_your_documents">Upload your Documents</string>
    <string name="proceed">PROCEED</string>
    <string name="sigin_in_using_facebook">facebook</string>
    <string name="heading">choose</string>
    <string name="start_the_request">Start the request</string>
    <string name="your_bookmarks">Your Bookmarks</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="days_left">days left</string>
</resources>
