<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seproject.crowdfunder.ui.RequestActivity">


    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_blue"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:textSize="@dimen/toolbar_text_size"/>
            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorHeight="0dp">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/content_home" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add" />

    </android.support.design.widget.CoordinatorLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Profile picture-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:src="@mipmap/ic_launcher" />

                <!--Rating-->
                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:progressTint="@color/colorYellow"
                    android:rating="@string/demo_rating"
                    android:scaleX=".75"
                    android:scaleY=".75"
                    android:stepSize="1" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Request title-->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="50dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxHeight="@dimen/max_title_height"
                    android:text="@string/demo_request"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_textsize"
                    android:textStyle="bold" />

                <!--Name title-->
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/demo_name"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <!--Place Name-->
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/demo_place"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!--Space-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorGrey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="120">

            <TextView
                android:id="@+id/amount_requested"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_amount"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/backers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_no_of_backers"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_days_left"
                android:textColor="@color/colorText"
                android:textStyle="bold" />


        </LinearLayout>

        <!--Progress of the request-->
        <ProgressBar
            android:id="@+id/percent_funded"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="bottom"
            android:progressDrawable="@drawable/custom_progress_bar" />

    </LinearLayout>

    <!--Bookmark-->
    <ImageView
        android:id="@+id/bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_not_bookmarked" />

</FrameLayout>
