<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.FillDetailsPageForStartingReqest">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light"
        android:textColorHint="@color/colorHint"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_background_edittext"
        android:textColor="@color/colorBlueText"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:text="Check your Details"
        android:padding="@dimen/default_padding_edittext"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingStart="12dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/roboto_light"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/blue_background_edittext"
            android:textColor="@color/colorBlueText"
            android:textSize="14sp"
            android:padding="@dimen/default_padding_edittext"
            android:hint="@string/give_your_project_a_name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:layout_marginBottom="40dp"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/blue_background_edittext"
            android:textSize="14sp"
            android:padding="@dimen/default_padding_edittext"
            android:hint="@string/tell_your_story"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:layout_marginBottom="40dp"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/blue_background_edittext"
            android:textSize="14sp"
            android:padding="@dimen/default_padding_edittext"
            android:hint="@string/amount_required"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:layout_marginBottom="40dp"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/blue_background_edittext"
            android:textSize="14sp"
            android:padding="@dimen/default_padding_edittext"
            android:hint="@string/what_is_the_deadline"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:layout_marginBottom="40dp"
            android:background="@drawable/selector_buttons"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:padding="@dimen/default_padding_edittext"
            android:text="Check the documents"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_the_request"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/default_padding_edittext"
        android:fontFamily="@font/roboto_light"
        android:textStyle="bold"
        android:background="@drawable/gradient_blue"
        android:onClick="gotToDocumentUpload"
        android:textColor="@android:color/white"
        />

</RelativeLayout>