<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="@dimen/edge_radius_card_default"
    app:cardElevation="@dimen/card_elevation"
    android:id="@+id/card"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Profile picture-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:src="@mipmap/ic_launcher" />

                <!--Rating-->
                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/colorYellow"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:rating="@string/demo_rating"
                    android:scaleX=".75"
                    android:scaleY=".75"
                    android:stepSize="1"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Request title-->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="50dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxHeight="@dimen/max_title_height"
                    android:text="@string/demo_request"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_textsize"
                    android:textStyle="bold" />

                <!--Name title-->
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/demo_name"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <!--Place Name-->
                <!--<TextView-->
                    <!--android:id="@+id/location"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--android:drawableStart="@drawable/ic_location"-->
                    <!--android:drawablePadding="5dp"-->
                    <!--android:fontFamily="@font/roboto_light"-->
                    <!--android:text="@string/demo_place"-->
                    <!--android:textColor="@color/colorText"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textStyle="bold" />-->
            </LinearLayout>
        </LinearLayout>

        <!--Space-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical"
            android:background="@color/colorGrey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="120">

            <TextView
                android:id="@+id/amount_requested"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_amount"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/backers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_no_of_backers"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/demo_days_left"
                android:textColor="@color/colorText"
                android:textStyle="bold" />


        </LinearLayout>

        <!--Progress of the request-->
        <ProgressBar
            android:id="@+id/percent_funded"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="bottom"
            android:progressDrawable="@drawable/custom_progress_bar" />

    </LinearLayout>

    <!--Bookmark-->
    <ImageView
        android:id="@+id/bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_not_bookmarked" />





</android.support.v7.widget.CardView>